scioal links mobile top gap fix

--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ h1 {
     flex-direction: row;
     justify-content: space-between;
     position: relative;
-    margin: 30px auto 0;
+    margin: -15px auto 0;
     width: 140px;
     @media screen and (min-width: 767.5px) {
       flex-direction: column;
